update logo and favicon

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DotShot Digital | Premium Digital Marketing Agency</title>
+    <link rel="icon" type="image/png" href="assets/images/dotshot-logo.png">
+    <title>DotShot Digital | Premium Digital Marketing Agency in Indore</title>
     <meta name="description"
-        content="DotShot Digital is a premier digital marketing and creative agency in Indore. We specialize in web development, social media, and visual branding." />
+        content="DotShot Digital is a premier digital marketing and creative agency in Indore. We specialize in web development, social media management, graphic design, and visual branding." />
+    <meta name="keywords"
+        content="digital marketing agency Indore, web development Indore, social media marketing, graphic design, video editing, branding agency, DotShot Digital" />
+    <link rel="canonical" href="https://dotshotdigital.com/" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dotshotdigital.com/" />
+    <meta property="og:title" content="DotShot Digital | Premium Digital Marketing Agency in Indore" />
+    <meta property="og:description"
+        content="Elevate your brand with Indore's leading digital agency. Specializing in web dev, social media, and creative branding." />
+    <meta property="og:image" content="https://dotshotdigital.com/assets/images/dotshot-logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dotshotdigital.com/" />
+    <meta property="twitter:title" content="DotShot Digital | Premium Digital Marketing Agency in Indore" />
+    <meta property="twitter:description"
+        content="Elevate your brand with Indore's leading digital agency. Specializing in web dev, social media, and creative branding." />
+    <meta property="twitter:image" content="https://dotshotdigital.com/assets/images/dotshot-logo.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
