--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us | DotShot Digital</title>
+    <link rel="icon" type="image/png" href="../assets/images/dotshot-logo.png">
+    <title>About Us | DotShot Digital - Creative Agency Indore</title>
+    <meta name="description"
+        content="Learn about DotShot Digital, a visionary creative agency in Indore founded by Shraddha Yadav. We empower brands with innovative digital solutions and strategic growth." />
+    <meta name="keywords"
+        content="Shraddha Yadav, DotShot Digital founder, creative agency Indore, digital marketing team, branding experts Indore" />
+    <link rel="canonical" href="https://dotshotdigital.com/pages/about.html" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dotshotdigital.com/pages/about.html" />
+    <meta property="og:title" content="About Us | DotShot Digital - Creative Agency Indore" />
+    <meta property="og:description"
+        content="Meet the team behind DotShot Digital. Founded by Shraddha Yadav, we're dedicated to your brand's digital excellence." />
+    <meta property="og:image" content="https://dotshotdigital.com/assets/images/ceo.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dotshotdigital.com/pages/about.html" />
+    <meta property="twitter:title" content="About Us | DotShot Digital - Creative Agency Indore" />
+    <meta property="twitter:description"
+        content="Meet the team behind DotShot Digital. Founded by Shraddha Yadav, we're dedicated to your brand's digital excellence." />
+    <meta property="twitter:image" content="https://dotshotdigital.com/assets/images/ceo.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
