--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,19 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="canonical" href="https://dotshotdigital.com/pages/contact.html" />
+<meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us | DotShot Digital</title>
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://dotshotdigital.com/pages/contact.html" />
+<meta property="og:title" content="Contact Us | Get a Free Consultation | DotShot Digital" />
+<meta property="og:description"
+    content="Let's build something amazing together. Contact DotShot Digital for expert digital marketing and creative solutions." />
+<meta property="og:image" content="https://dotshotdigital.com/assets/images/dotshot-logo.png" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://dotshotdigital.com/pages/contact.html" />
+<meta property="twitter:title" content="Contact Us | Get a Free Consultation | DotShot Digital" />
+<meta property="twitter:description"
+    content="Let's build something amazing together. Contact DotShot Digital for expert digital marketing and creative solutions." />
+<meta property="twitter:image" content="https://dotshotdigital.com/assets/images/dotshot-logo.png" />
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/contact.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/contact.css">
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
