--- a/pages/services.html
+++ b/pages/services.html
@@ -1,17 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="canonical" href="https://dotshotdigital.com/pages/services.html" />
+<meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Services | DotShot Digital</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/services.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://dotshotdigital.com/pages/services.html" />
+<meta property="og:title" content="Our Services | Digital Marketing, Web Dev & Design | DotShot Digital" />
+<meta property="og:description"
+    content="Transform your brand with our expert digital services. From web development to cinematic video editing, we've got you covered." />
+<meta property="og:image" content="https://dotshotdigital.com/assets/images/digital-marketing.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://dotshotdigital.com/pages/services.html" />
+<meta property="twitter:title" content="Our Services | Digital Marketing, Web Dev & Design | DotShot Digital" />
+<meta property="twitter:description"
+    content="Transform your brand with our expert digital services. From web development to cinematic video editing, we've got you covered." />
+<meta property="twitter:image" content="https://dotshotdigital.com/assets/images/digital-marketing.png" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/services.css">
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
