--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="../assets/images/dotshot-logo.png">
+    <link rel="icon" href="../favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="manifest" href="../site.webmanifest">
     <title>About Us | DotShot Digital - Creative Agency Indore</title>
     <meta name="description"
         content="Learn about DotShot Digital, a visionary creative agency in Indore founded by Shraddha Yadav. We empower brands with innovative digital solutions and strategic growth." />
